Adding more blur hive tests and this fixes the tests when hadoop2 is the profile.